// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CrewMembers when the page renders with default crew members should have inputs filled with the default values 1`] = `
<DocumentFragment>
  <div
    class="grid grid-cols-1 sm:grid-cols-2 gap-4"
  >
    <div>
      <label
        class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        for="# of welders"
      >
        # of welders *
      </label>
      <div
        class="relative flex w-full items-center text-base font-normal text-neutral-shade-100 rounded-md border border-solid border-neutral-shade-26 rounded-md focus-within:ring-1 focus-within:ring-brand-gray-60 bg-neutral-light-100"
      >
        <input
          aria-errormessage=""
          aria-invalid="false"
          class="flex-auto rounded-md appearance-none focus:outline-none disabled:bg-neutral-light-77 read-only:cursor-default disabled:cursor-not-allowed disabled:opacity-38 min-w-0 p-2"
          id="# of welders"
          min="0"
          name="crew.nWelders"
          type="number"
          value="1"
        />
      </div>
    </div>
    <div>
      <label
        class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        for="# of safety prof."
      >
        # of safety prof. *
      </label>
      <div
        class="relative flex w-full items-center text-base font-normal text-neutral-shade-100 rounded-md border border-solid border-neutral-shade-26 rounded-md focus-within:ring-1 focus-within:ring-brand-gray-60 bg-neutral-light-100"
      >
        <input
          aria-errormessage=""
          aria-invalid="false"
          class="flex-auto rounded-md appearance-none focus:outline-none disabled:bg-neutral-light-77 read-only:cursor-default disabled:cursor-not-allowed disabled:opacity-38 min-w-0 p-2"
          id="# of safety prof."
          min="0"
          name="crew.nSafetyProf"
          type="number"
          value="2"
        />
      </div>
    </div>
    <div>
      <label
        class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        for="# of flaggers"
      >
        # of flaggers *
      </label>
      <div
        class="relative flex w-full items-center text-base font-normal text-neutral-shade-100 rounded-md border border-solid border-neutral-shade-26 rounded-md focus-within:ring-1 focus-within:ring-brand-gray-60 bg-neutral-light-100"
      >
        <input
          aria-errormessage=""
          aria-invalid="false"
          class="flex-auto rounded-md appearance-none focus:outline-none disabled:bg-neutral-light-77 read-only:cursor-default disabled:cursor-not-allowed disabled:opacity-38 min-w-0 p-2"
          id="# of flaggers"
          min="0"
          name="crew.nFlaggers"
          type="number"
          value="3"
        />
      </div>
    </div>
    <div>
      <label
        class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        for="# of laborers"
      >
        # of laborers *
      </label>
      <div
        class="relative flex w-full items-center text-base font-normal text-neutral-shade-100 rounded-md border border-solid border-neutral-shade-26 rounded-md focus-within:ring-1 focus-within:ring-brand-gray-60 bg-neutral-light-100"
      >
        <input
          aria-errormessage=""
          aria-invalid="false"
          class="flex-auto rounded-md appearance-none focus:outline-none disabled:bg-neutral-light-77 read-only:cursor-default disabled:cursor-not-allowed disabled:opacity-38 min-w-0 p-2"
          id="# of laborers"
          min="0"
          name="crew.nLaborers"
          type="number"
          value="4"
        />
      </div>
    </div>
    <div>
      <label
        class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        for="# of operators"
      >
        # of operators *
      </label>
      <div
        class="relative flex w-full items-center text-base font-normal text-neutral-shade-100 rounded-md border border-solid border-neutral-shade-26 rounded-md focus-within:ring-1 focus-within:ring-brand-gray-60 bg-neutral-light-100"
      >
        <input
          aria-errormessage=""
          aria-invalid="false"
          class="flex-auto rounded-md appearance-none focus:outline-none disabled:bg-neutral-light-77 read-only:cursor-default disabled:cursor-not-allowed disabled:opacity-38 min-w-0 p-2"
          id="# of operators"
          min="0"
          name="crew.nOperators"
          type="number"
          value="5"
        />
      </div>
    </div>
    <div>
      <label
        class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        for="# of other crew members"
      >
        # of other crew members *
      </label>
      <div
        class="relative flex w-full items-center text-base font-normal text-neutral-shade-100 rounded-md border border-solid border-neutral-shade-26 rounded-md focus-within:ring-1 focus-within:ring-brand-gray-60 bg-neutral-light-100"
      >
        <input
          aria-errormessage=""
          aria-invalid="false"
          class="flex-auto rounded-md appearance-none focus:outline-none disabled:bg-neutral-light-77 read-only:cursor-default disabled:cursor-not-allowed disabled:opacity-38 min-w-0 p-2"
          id="# of other crew members"
          min="0"
          name="crew.nOtherCrew"
          type="number"
          value="6"
        />
      </div>
    </div>
  </div>
  <div
    class="mt-4"
  >
    <div>
      <label
        class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
      >
        Total # of crew members
      </label>
      <div
        class="relative flex w-full items-center text-base font-normal text-neutral-shade-100 rounded-md border border-solid border-neutral-shade-26 rounded-md focus-within:ring-1 focus-within:ring-brand-gray-60 bg-neutral-light-100"
      >
        <input
          aria-errormessage=""
          aria-invalid="false"
          class="flex-auto rounded-md appearance-none focus:outline-none disabled:bg-neutral-light-77 read-only:cursor-default disabled:cursor-not-allowed disabled:opacity-38 min-w-0 p-2"
          disabled=""
          type="text"
          value="21"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CrewMembers when the page renders without default crew members should have empty crew inputs 1`] = `
<DocumentFragment>
  <div
    class="grid grid-cols-1 sm:grid-cols-2 gap-4"
  >
    <div>
      <label
        class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        for="# of welders"
      >
        # of welders *
      </label>
      <div
        class="relative flex w-full items-center text-base font-normal text-neutral-shade-100 rounded-md border border-solid border-neutral-shade-26 rounded-md focus-within:ring-1 focus-within:ring-brand-gray-60 bg-neutral-light-100"
      >
        <input
          aria-errormessage=""
          aria-invalid="false"
          class="flex-auto rounded-md appearance-none focus:outline-none disabled:bg-neutral-light-77 read-only:cursor-default disabled:cursor-not-allowed disabled:opacity-38 min-w-0 p-2"
          id="# of welders"
          min="0"
          name="crew.nWelders"
          type="number"
          value=""
        />
      </div>
    </div>
    <div>
      <label
        class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        for="# of safety prof."
      >
        # of safety prof. *
      </label>
      <div
        class="relative flex w-full items-center text-base font-normal text-neutral-shade-100 rounded-md border border-solid border-neutral-shade-26 rounded-md focus-within:ring-1 focus-within:ring-brand-gray-60 bg-neutral-light-100"
      >
        <input
          aria-errormessage=""
          aria-invalid="false"
          class="flex-auto rounded-md appearance-none focus:outline-none disabled:bg-neutral-light-77 read-only:cursor-default disabled:cursor-not-allowed disabled:opacity-38 min-w-0 p-2"
          id="# of safety prof."
          min="0"
          name="crew.nSafetyProf"
          type="number"
          value=""
        />
      </div>
    </div>
    <div>
      <label
        class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        for="# of flaggers"
      >
        # of flaggers *
      </label>
      <div
        class="relative flex w-full items-center text-base font-normal text-neutral-shade-100 rounded-md border border-solid border-neutral-shade-26 rounded-md focus-within:ring-1 focus-within:ring-brand-gray-60 bg-neutral-light-100"
      >
        <input
          aria-errormessage=""
          aria-invalid="false"
          class="flex-auto rounded-md appearance-none focus:outline-none disabled:bg-neutral-light-77 read-only:cursor-default disabled:cursor-not-allowed disabled:opacity-38 min-w-0 p-2"
          id="# of flaggers"
          min="0"
          name="crew.nFlaggers"
          type="number"
          value=""
        />
      </div>
    </div>
    <div>
      <label
        class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        for="# of laborers"
      >
        # of laborers *
      </label>
      <div
        class="relative flex w-full items-center text-base font-normal text-neutral-shade-100 rounded-md border border-solid border-neutral-shade-26 rounded-md focus-within:ring-1 focus-within:ring-brand-gray-60 bg-neutral-light-100"
      >
        <input
          aria-errormessage=""
          aria-invalid="false"
          class="flex-auto rounded-md appearance-none focus:outline-none disabled:bg-neutral-light-77 read-only:cursor-default disabled:cursor-not-allowed disabled:opacity-38 min-w-0 p-2"
          id="# of laborers"
          min="0"
          name="crew.nLaborers"
          type="number"
          value=""
        />
      </div>
    </div>
    <div>
      <label
        class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        for="# of operators"
      >
        # of operators *
      </label>
      <div
        class="relative flex w-full items-center text-base font-normal text-neutral-shade-100 rounded-md border border-solid border-neutral-shade-26 rounded-md focus-within:ring-1 focus-within:ring-brand-gray-60 bg-neutral-light-100"
      >
        <input
          aria-errormessage=""
          aria-invalid="false"
          class="flex-auto rounded-md appearance-none focus:outline-none disabled:bg-neutral-light-77 read-only:cursor-default disabled:cursor-not-allowed disabled:opacity-38 min-w-0 p-2"
          id="# of operators"
          min="0"
          name="crew.nOperators"
          type="number"
          value=""
        />
      </div>
    </div>
    <div>
      <label
        class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
        for="# of other crew members"
      >
        # of other crew members *
      </label>
      <div
        class="relative flex w-full items-center text-base font-normal text-neutral-shade-100 rounded-md border border-solid border-neutral-shade-26 rounded-md focus-within:ring-1 focus-within:ring-brand-gray-60 bg-neutral-light-100"
      >
        <input
          aria-errormessage=""
          aria-invalid="false"
          class="flex-auto rounded-md appearance-none focus:outline-none disabled:bg-neutral-light-77 read-only:cursor-default disabled:cursor-not-allowed disabled:opacity-38 min-w-0 p-2"
          id="# of other crew members"
          min="0"
          name="crew.nOtherCrew"
          type="number"
          value=""
        />
      </div>
    </div>
  </div>
  <div
    class="mt-4"
  >
    <div>
      <label
        class="block text-tiny md:text-sm text-neutral-shade-75 font-semibold mb-2 leading-normal"
      >
        Total # of crew members
      </label>
      <div
        class="relative flex w-full items-center text-base font-normal text-neutral-shade-100 rounded-md border border-solid border-neutral-shade-26 rounded-md focus-within:ring-1 focus-within:ring-brand-gray-60 bg-neutral-light-100"
      >
        <input
          aria-errormessage=""
          aria-invalid="false"
          class="flex-auto rounded-md appearance-none focus:outline-none disabled:bg-neutral-light-77 read-only:cursor-default disabled:cursor-not-allowed disabled:opacity-38 min-w-0 p-2"
          disabled=""
          type="text"
          value="0"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
